--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
               <span> {{ cate.title | bmCapital }} </span>
               <span flex=""> </span>
               <md-button class="md-icon-button">
-                <md-icon class="material-icons md-light md-48"> add_circle_outline </md-icon>
+                <md-icon class="material-icons md-light md-48" ng-click="addItem()"> add_circle_outline </md-icon>
               </md-button>
               <md-button class="md-icon-button">
                 <md-icon class="material-icons md-light md-48"> delete </md-icon>
