--- a/public/addItem.html
+++ b/public/addItem.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content class="md-padding">
-		<form name="addForm"  >
+		<form name="addForm">
 			<md-input-container flex>
 				<label>Title</label>
 				<input ng-model="todo.what" placeholder="Enter Bookmark title">
@@ -12,9 +12,9 @@
 
 		</form>
 	</md-content>
-	<div class="md-actions" layout="row">
+	<div class="md-dialog-actions" layout="row">
 		<span flex></span>
 		<md-button ng-click="cancel()"> Cancel </md-button>
-		<md-button ng-click="answer()" class="md-primary"> Save </md-button>
+		<md-button ng-click="save()" class="md-primary"> Save </md-button>
  	</div>
 </md-dialog>
