--- a/public/addCate.html
+++ b/public/addCate.html
@@ -2,12 +2,9 @@
 	<md-content class="md-padding">
 		<form name="addForm">
 			<md-input-container flex>
-				<label>Title</label>
-				<input ng-model="data.title" placeholder="Enter Bookmark title">
-			</md-input-container> <br>
-			<md-input-container flex>
-				<label>URL</label>
-				<input ng-model="data.url" placeholder="Enter URL">
+				<label>Category Name</label>
+				<input ng-model="title" placeholder="Enter category name">
+          <p>{{$scope.title}} testing</p>
 			</md-input-container>
 
 		</form>
