Add category sucessfully and add item to a specific category, but cannot get input of new item

--- a/public/addItem.html
+++ b/public/addItem.html
@@ -3,11 +3,11 @@
 		<form name="addForm">
 			<md-input-container flex>
 				<label>Title</label>
-				<input ng-model="tempTitle" placeholder="Enter Bookmark title">
+				<input ng-model="itemTitle" placeholder="Enter Bookmark title">
 			</md-input-container> <br>
 			<md-input-container flex>
 				<label>URL</label>
-				<input ng-model="tempURL" placeholder="Enter URL">
+				<input ng-model="itemURL" placeholder="Enter URL">
 			</md-input-container>
 
 		</form>
