delete Item and Delete Category work

--- a/public/addItem.html
+++ b/public/addItem.html
@@ -1,5 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content class="md-padding">
+    <h3> Add a bookmark </h3>
 		<form name="addForm">
 			<md-input-container flex>
 				<label>Title</label>
