edit category title sucessfully

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
                 <md-icon class="material-icons md-light md-48" ng-click="addItem($event, cate)"> add_circle_outline </md-icon>
               </md-button>
               <md-button class="md-icon-button">
+                <md-icon class="material-icons md-light md-48" ng-click="renameCate($event, cate)"> mode_edit </md-icon>
+              </md-button>
+              <md-button class="md-icon-button">
                 <md-icon class="material-icons md-light md-48" ng-click="deleteCate($event, cate, $index)"> delete </md-icon>
               </md-button>
             </bm-subheader>
