sucessfully add, edit, delete  category and item

--- a/public/addItem.html
+++ b/public/addItem.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content class="md-padding">
     <h3> Add a bookmark </h3>
-		<form name="addForm">
+		<form name="addItemForm">
 			<md-input-container flex>
 				<label>Title</label>
 				<input ng-model="itemTitle" placeholder="Enter Bookmark title">
