--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
               </div>
               <span flex=""> </span>
               <md-button class="md-icon-button item-hover">
-                <md-icon class="material-icons md-light md-48"> mode_edit </md-icon>
+                <md-icon class="material-icons md-light md-48" ng-click="editItem($event, cate, $index)"> mode_edit </md-icon>
               </md-button>
               <md-button class="md-icon-button item-hover">
                 <md-icon class="material-icons md-light md-48" ng-click="deleteItem($event, cate, $index)"> close </md-icon>
