--- a/public/addCate.html
+++ b/public/addCate.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content class="md-padding">
 		<h3> Add a category </h3>
-		<form name="addForm">
+		<form name="addCateForm">
 			<md-input-container flex>
 				<label>Category Name</label>
 				<input ng-model="title" placeholder="Enter category name">
