--- a/public/renameCate.html
+++ b/public/renameCate.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content class="md-padding">
-		<form name="addForm">
+		<form name="renameCateForm">
 			<md-input-container flex>
 				<label>Category Title</label>
 				<input ng-model="cateTitle" >
