display number of items in a category

--- a/public/addItem.html
+++ b/public/addItem.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content class="md-padding" layout="column">
-    <h3> Add a bookmark in {{cate.title}} category</h3>
+    <h3> Add a bookmark in {{cate.title}} </h3>
 			<md-input-container flex="">
 				<label>Title</label>
 				<input ng-model="itemTitle" flex="" placeholder="Enter Bookmark title">
