fix addItem so that it get the url input

--- a/public/addItem.html
+++ b/public/addItem.html
@@ -3,11 +3,11 @@
     <h3> Add a bookmark in {{cate.title}} </h3>
 			<md-input-container flex="">
 				<label>Title</label>
-				<input ng-model="itemTitle" flex="" placeholder="Enter Bookmark title">
-			</md-input-container> <br>
-			<md-input-container flex>
+				<input ng-model="item.title"  placeholder="Enter Bookmark title">
+			</md-input-container>
+			<md-input-container flex="">
 				<label>URL</label>
-				<input ng-model="itemURL" placeholder="Enter URL">
+				<input ng-model="item.url"  placeholder="Enter URL">
 			</md-input-container>
 	</md-content>
 	<div class="md-dialog-actions" layout="row">
