some small changes

--- a/public/renameCate.html
+++ b/public/renameCate.html
@@ -1,11 +1,10 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content class="md-padding">
-		<form name="renameCateForm">
-			<md-input-container flex>
+	<md-content class="md-padding" layout="column">
+			<h3> Rename Category </h3>
+			<md-input-container flex="">
 				<label>Category Title</label>
 				<input ng-model="cateTitle" >
-			</md-input-container> <br>
-		</form>
+			</md-input-container>
 	</md-content>
 	<div class="md-dialog-actions" layout="row">
 		<span flex></span>
