add expand_more and expand_less icons, but not working yet

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,14 @@
         <md-list flex="">
           <gr ng-repeat="cate in data">
             <bm-subheader layout="row">
-              <span> {{ cate.title | bmCapital }} ({{cate.items.length}})</span>
+              <span> {{ cate.title | bmCapital }} ({{cate.items.length}})
+                <md-button class="md-icon-button" ng-click="cate.__expand = !cate.__expand" ng-show="cate.__expand">
+                  <md-icon class="material-icons md-light md-48"> expand_less </md-icon>
+                </md-button>
+                <md-button class="md-icon-button" ng-click="cate.__expand = !cate.__expand" ng-show="!cate.__expand">
+                  <md-icon class="material-icons md-light md-48"> expand_more </md-icon>
+                </md-button>
+              </span>
               <span flex=""> </span>
               <md-button class="md-icon-button" ng-click="addItem($event, cate)">
                 <md-icon class="material-icons md-light md-48"> add_circle_outline </md-icon>
