--- a/public/save.html
+++ b/public/save.html
@@ -3,8 +3,12 @@
 			<h3> Save </h3>
       <p> Please enter your unique key to save all data. </p>
 			<md-input-container flex="">
-				<label>Unique Key</label>
-				<input ng-model="ukey" placeholder="Enter unique key">
+				<label>ID</label>
+				<input ng-model="acc.id" placeholder="Your ID">
+			</md-input-container>
+			<md-input-container flex="">
+				<label>Password</label>
+				<input ng-model="acc.password" placeholder="Your Password">
 			</md-input-container>
 	</md-content>
 	<div class="md-dialog-actions" layout="row">
