--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <title>Bookmark</title>
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="img/android-desktop.png">
+    <!-- <link rel="icon" sizes="192x192" href="img/android-desktop.png"> -->
+
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
