add (post) category sucessfully

--- a/public/addCate.html
+++ b/public/addCate.html
@@ -3,11 +3,11 @@
 			<h3> Add a category </h3>
 			<md-input-container flex>
 				<label>Name</label>
-				<input ng-model="name" placeholder="Category name">
+				<input ng-model="cate.name" placeholder="Category name">
 			</md-input-container>
 			<md-input-container flex>
 				<label>Description</label>
-				<input ng-model="description" placeholder="Category description">
+				<input ng-model="cate.description" placeholder="Category description">
 			</md-input-container>
 	</md-content>
 	<div class="md-dialog-actions" layout="row">
