load category work for category and item

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
 </head>
 <body ng-app="bookmark" ng-controller="BookmarkController">
   <div layout="row">
-    <div flex="50"></div>
-      <md-button class="md-icon-button" flex="10" ng-click="save($event)">
+    <div flex="60"></div>
+      <!-- <md-button class="md-icon-button" flex="10" ng-click="save($event)">
         <md-icon class="material-icons md-light md-48" > cloud_upload </md-icon> Save
-      </md-button>
+      </md-button> -->
       <md-button class="md-icon-button" flex="10" ng-click="load($event)">
         <md-icon class="material-icons md-light md-48"> cloud_download </md-icon> Load
       </md-button>
